# cq-frk-fm3

./: README.md  SEGGER - FM3.jflash
apps/agmsense/: Cargo.toml  doflash.sh
apps/agmsense/.cargo/: config.toml
apps/agmsense/src/: i2c.rs  main.rs  serial.rs
apps/blinkenlight/: Cargo.toml  doflash.sh  postprocess-elf.sh
apps/blinkenlight/.cargo/: config.toml
apps/blinkenlight/src/: main.rs
apps/sermon/: Cargo.toml  device.x  doflash.sh  memory.x  openocd.cfg  postprocess-elf.sh
apps/sermon/src/: main.rs  serial.rs
