[package]
authors = ["Jeff Glaum <jeffglaum@live.com>"]
edition = "2018"
readme = "README.md"
name = "blinkenlight"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
mb9bf61xt = { git = "https://github.com/jeffglaum/fm3.git" }

# this lets you use `cargo fix`!
[[bin]]
name = "blinkenlight"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
