[package]
authors = ["Jeff Glaum <jeffglaum@live.com>"]
edition = "2018"
readme = "README.md"
name = "blinkenlight"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
mb9bf61xt = { git = "https://github.com/jeffglaum/fm3.git" }
rtt-target = "0.5.0"

# this lets you use `cargo fix`!
[[bin]]
name = "blinkenlight"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
