[package]
authors = ["Jeff Glaum <jeffglaum@live.com>"]
edition = "2018"
readme = "README.md"
name = "sermon"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
panic-halt = "0.2.0"
mb9bf61xt = { git = "https://github.com/jeffglaum/fm3.git", features = ["rt"] }
embedded-io = "0.6.1"
circular-buffer = { version = "0.1.6", default-features = false, features = [] }

# this lets you use `cargo fix`!
[[bin]]
name = "sermon"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
